--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -15,7 +15,14 @@
       {{ content }}
     </section>
     <h2>Posts</h2>
-      {{ posts }}
+      <ul>
+        {% for post in site.posts %}
+          <li>
+            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+            <p>{{ post.excerpt }}</p>
+          </li>
+        {% endfor %}
+      </ul>
     <footer>
       &copy; to me
     </footer>
