--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,7 +14,7 @@
     <section>
       {{ content }}
     </section>
-    <h2>Posts</h2>
+    <h2>{{ site.posts.size }} Posts</h2>
       <ul>
         {% for post in site.posts %}
           <li>
