--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,7 +18,7 @@
       <ul>
         {% for post in site.posts %}
           <li>
-            <h2><a href="_posts/{{ post.url }}">{{ post.title }}</a></h2>
+            <h2><a href="{{ _posts/post.url }}">{{ post.title }}</a></h2>
             <p>{{ post.excerpt }}</p>
           </li>
         {% endfor %}
