--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,6 +14,9 @@
     <section>
       {{ content }}
     </section>
+    <h2>Variables</h2>
+    site: {{ site }} </br>
+  
     <h2>{{ site.posts.size }} Posts</h2>
       <ul>
         {% for post in site.posts %}
