--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -16,6 +16,7 @@
     </section>
     <h2>Variables</h2>
     site: {{ site }} </br>
+    thesitename: {{ thesitename }} </br>
   
     <h2>{{ site.posts.size }} Posts</h2>
       <ul>
