--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,7 +8,7 @@
   <body>
     <nav>
       <a href="/">Home</a>
-      <a href="BEATME/">Blog</a>
+      <a href="BEATME/">BEATME</a>
     </nav>
     <h1>{{ page.title }}</h1>
     <section>
