--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,7 +8,7 @@
   <body>
     <nav>
       <a href="/">Home</a>
-      <a href="BEATME/">BEATME</a>
+      <a href="BEATME/">/</a>
     </nav>
     <h1>{{ page.title }}</h1>
     <section>
@@ -22,7 +22,7 @@
       <ul>
         {% for post in site.posts %}
           <li>
-            <h2><a href="beatme{{ post.url }}">{{ post.title }}</a></h2>
+            <h2><a href="/{{ post.url }}">{{ post.title }}</a></h2>
             <p>{{ post.excerpt }}</p>
           </li>
         {% endfor %}
