--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -22,7 +22,7 @@
       <ul>
         {% for post in site.posts %}
           <li>
-            <h2><a href="/{{ post.url }}">{{ post.title }}</a></h2>
+            <h2><a href="\/{{ post.url }}">{{ post.title }}</a></h2>
             <p>{{ post.excerpt }}</p>
           </li>
         {% endfor %}
