--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -27,8 +27,6 @@
           </li>
         {% endfor %}
       </ul>
-    <footer>
-      &copy; to me
-    </footer>
-  </body>
+ {%- include footer.html -%}  
+</body>
 </html>
