--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
   <script type = "text/javascript">
     var thisYear = new Date();
-    document.write("getYear() : " + thisYear.getYear() ); 
+    document.write(thisYear.getYear()); 
   </script>      
 </footer>
