--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -1,6 +1,6 @@
 <footer>
-  <script type = "text/javascript">
+  Copyright <script type = "text/javascript">
     var thisYear = new Date();
-    document.write(thisYear.getYear()); 
-  </script>      
+    document.write(thisYear.getFullYear()); 
+  </script> by Your Name Year
 </footer>
