--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -2,5 +2,5 @@
   Copyright <script type = "text/javascript">
     var thisYear = new Date();
     document.write(thisYear.getFullYear()); 
-  </script> by Your Name Year
+  </script> by Your Name Here
 </footer>
