--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -1,1 +1,13 @@
-<h1>BEEG BEEG HEADER</h1>
+<!doctype html>
+<html lang="en">
+<head>
+  <!-- This site is responsive. Use full screen width. -->
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<!-- Ensure use of most common Unicode characters -->
+	<meta charset="utf-8">
+	<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre.min.css">
+	<!-- Considered an "experimental" feature -->
+	<link rel="stylesheet" href="https://unpkg.com/spectre.css/dist/spectre-exp.min.css" />
+	<!-- Spectre.css icons are used -->
+	<link rel="stylesheet"href="https://unpkg.com/spectre.css/dist/spectre-icons.min.css"> 
+<head>  
