--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,10 +1,4 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
-    <link rel="stylesheet" href="/css/style.css">
-  </head>
+{%- include header.html -%}  
   <body>
     <nav>
       <a href="/">Home</a>
