--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,8 +1,6 @@
 {%- include header.html -%}  
   <body>
-    <nav>
-      <a href="/">Home</a>
-    </nav>
+{%- include nav.html -%}  
     <h1>{{ page.title }}</h1>
     <section>
       {{ content }}
