--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -7,6 +7,7 @@
     </section>
     <h2>Variables</h2>
     site: {{ site }} </br>
+site.time {{ site.time }} </br>
     thesitename: {{ site.thesitename }} </br>
   
     <h2>{{ site.posts.size }} Posts</h2>
