--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -8,7 +8,7 @@
     <h2>Variables</h2>
     <h2>{{ site.posts.size }} Posts</h2>
         {% for post in site.posts %}
-            <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+            <h2><a href="{{ site.baseurl}}{{ post.url }}">{{ post.title }}</a></h2>
             <p>{{ post.excerpt }}</p>
         {% endfor %}
  {%- include footer.html -%}  
