--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -1,7 +1,7 @@
 {%- include header.html -%}  
   <body>
 {%- include nav.html -%}  
-    <h1>{{ page.title }}</h1>
+    <h1>{{ Welcome to {{ site.organization }}</h1>
     <section>
       {{ content }}
     </section>
